--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "note-taker",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.16.4"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.7"
-  }
+    "name": "note-taker",
+    "version": "1.0.0",
+    "description": "note taker app",
+    "main": "server.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js"
+    },
+    "author": "Gustaf",
+    "license": "ISC",
+    "dependencies": {
+        "express": "^4.16.4"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.7"
+    }
 }
